--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div id="Section1">
             <h3>Happy New Year</h3>
             <h1>New Year Party </h1>
-            <h1>Celebration</h1>
+            <h1 id="C">Celebration</h1>
         </div>
     </header>
     <main>
         <section class="discount-container">
             <h1 class="discount-title">65% OFF</h1>
             <h4 class="discount-discription">OUR HOLIDAY DEALS ARE BETTER</h4>
-            <h2 class="d-f">ALL CATEGORIES</h2>
+            <h2 class="selmon">ALL CATEGORIES</h2>
             <img src="New Year Photo.png" alt="New Year Photo">
         </section>
         <section class="welcome-container">
@@ -73,9 +73,19 @@
 
         <section class="hodiday-container">
             <div class="holiday-text">
-
+                <h2 class="holiday-title1">WHAT IS FUNCTIONAL</h2>
+                <h2 class="holiday-title2"><span>Holidays </span>Sale 50%</h2>
+                <p class="holiday-discription">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br> 
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id <br> fermentum amet amet sit consectetur.</p>
             </div>
-            holiday 
+            <div class="holiday-image">
+                <img class="box" src="resources/Group 75.png" alt="">
+                <div class="holiday-folder">
+                    <img class="discount" src="resources/Group 44.png" alt="">
+                    <img class="girl" src="resources/Rectangle 1.png" alt="">
+                </div>
+            </div>
+            
         </section>
 
         <section class="portfolio-container">
@@ -116,8 +126,8 @@
                 <div class="top-left">44, Big Building Roosevelt Street <br>
                     Beach Gardens Florida 33410</div>
                 <div class="top-right">
-                    <div class="up">+00 123 584 124</div>
-                    <div class="down">www.website.com</div>
+                    <div class="up"><img style="height: 24px;width: 24px;" src="resources/Call.png" alt="">   +00 123 584 124</div >
+                    <div class="down"><img style="height: 24px;width: 24px;" src="resources/Website.png" alt=""> www.website.com</div>
                 </div>
             </div>
             <hr>
