--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 <div class="offer-item">
                     <h2 class="offer-title">NEW BEST OFFER</h2>
                     <h2 class="offer-coming">Coming Soon</h2>
-                    <p class="offer-discription">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed
+                    <p class="offer-discription">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas
+                        sed
                         molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 </div>
                 <div class="offer-photo">
@@ -71,28 +72,62 @@
             </div>
         </section>
 
-        <section class="hodiday-container">
-            <div class="holiday-text">
-                <h2 class="holiday-title1">WHAT IS FUNCTIONAL</h2>
-                <h2 class="holiday-title2"><span>Holidays </span>Sale 50%</h2>
-                <p class="holiday-discription">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br> 
-                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id <br> fermentum amet amet sit consectetur.</p>
-            </div>
-            <div class="holiday-image">
-                <img class="box" src="resources/Group 75.png" alt="">
-                <div class="holiday-folder">
-                    <img class="discount" src="resources/Group 44.png" alt="">
-                    <img class="girl" src="resources/Rectangle 1.png" alt="">
+        <section class="main-holiday-container">
+            <div class="hodiday-container">
+                <div class="holiday-text">
+                    <h2 class="holiday-title1">WHAT IS FUNCTIONAL</h2>
+                    <h2 class="holiday-title2"><span>Holidays </span>Sale 50%</h2>
+                    <p class="holiday-discription">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        <br>
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus
+                        quam id
+                        <br> fermentum amet amet sit consectetur.
+                    </p>
+                </div>
+                <div class="holiday-image">
+                    <img class="box" src="resources/Group 75.png" alt="">
+                    <div class="holiday-folder">
+                        <img class="discount" src="resources/Group 44.png" alt="">
+                        <img class="girl" src="resources/Rectangle 1.png" alt="">
+                    </div>
                 </div>
             </div>
-            
         </section>
+
+        <!-- <section>
+            <div class="text">
+                <h3>what a FUNCTIONAL</h3>
+                <h1>Holiday sell 50%</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, fugit? Est deleniti numquam error
+                    quam ad iste, cumque placeat consectetur unde doloribus consequuntur adipisci atque, sit asperiores
+                    porro rerum ab.</p>
+            </div>
+            <div class="img-div">
+                <div class="giftbox"><img src="resources/Group 75.png" alt=""></div>
+                <div class="discount"><img src="resources/Group 44.png" alt=""></div>
+                <div class="girl"><img src="resources/Rectangle 1.png" alt=""></div>
+            </div>
+        </section> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         <section class="portfolio-container">
             <div class="portfolio-text">
                 <h2 class="portfolio-title">THE BEST GIFTS</h2>
                 <h2 class="portfolio-title2">Our Awesome Portfolio</h2>
-                <p class="offer-discription">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="offer-discription">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
             <div class="portfolio-image1">
                 <img src="resources/Rectangle 3.png" alt="">
@@ -112,9 +147,10 @@
                 height: 150px;
                 flex-shrink: 0;" src="resources/Group 61.png" alt="">
                 <h2 class="Subercibe">Subscribe Newsletter</h2>
-                <p class="offer-discription">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="offer-discription">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 <label for="email">
-                    <input  placeholder="user@gmail.com" type="email"><span class="Subscribe">Subscribe</span>
+                    <input placeholder="user@gmail.com" type="email"><span class="Subscribe">Subscribe</span>
                 </label>
             </div>
 
@@ -126,8 +162,10 @@
                 <div class="top-left">44, Big Building Roosevelt Street <br>
                     Beach Gardens Florida 33410</div>
                 <div class="top-right">
-                    <div class="up"><img style="height: 24px;width: 24px;" src="resources/Call.png" alt="">   +00 123 584 124</div >
-                    <div class="down"><img style="height: 24px;width: 24px;" src="resources/Website.png" alt=""> www.website.com</div>
+                    <div class="up"><img style="height: 24px;width: 24px;" src="resources/Call.png" alt=""> +00 123 584
+                        124</div>
+                    <div class="down"><img style="height: 24px;width: 24px;" src="resources/Website.png" alt="">
+                        www.website.com</div>
                 </div>
             </div>
             <hr>
