--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-container">
         <div id="Section1">
             <h3>Happy New Year</h3>
             <h1>New Year Party </h1>
@@ -93,35 +93,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- <section>
-            <div class="text">
-                <h3>what a FUNCTIONAL</h3>
-                <h1>Holiday sell 50%</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, fugit? Est deleniti numquam error
-                    quam ad iste, cumque placeat consectetur unde doloribus consequuntur adipisci atque, sit asperiores
-                    porro rerum ab.</p>
-            </div>
-            <div class="img-div">
-                <div class="giftbox"><img src="resources/Group 75.png" alt=""></div>
-                <div class="discount"><img src="resources/Group 44.png" alt=""></div>
-                <div class="girl"><img src="resources/Rectangle 1.png" alt=""></div>
-            </div>
-        </section> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <section class="portfolio-container">
             <div class="portfolio-text">
                 <h2 class="portfolio-title">THE BEST GIFTS</h2>
